--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <div id="app" class="relative bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto backdrop-blur-lg opacity-90 sm:rounded-lg sm:px-10"></div>
 </div>
 <script type="module" src="/main.js"></script>
+<script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
