--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 </nav>
 
 <div class="relative flex min-h-screen flex-col bg-gray-50 py-6 sm:py-12">
-    <img src="/public/beams.jpg" alt="" class="absolute left-1/2 top-1/2 max-w-none -translate-x-1/2 -translate-y-1/2"
+    <img src="/public/beams.jpg" alt="" class="fixed left-1/2 top-1/2 max-w-none -translate-x-1/2 -translate-y-1/2"
          width="1308"/>
-    <div class="bg-[url(/public/grid.svg)] absolute inset-0 bg-grid-slate-900/[0.04] bg-[bottom_1px_center] dark:bg-grid-slate-400/[0.05] dark:bg-bottom dark:border-b dark:border-slate-100/5"></div>
+    <div class="bg-[url(/public/grid.svg)] bg-fixed absolute inset-0 bg-grid-slate-900/[0.04] bg-[bottom_1px_center] dark:bg-grid-slate-400/[0.05] dark:bg-bottom dark:border-b dark:border-slate-100/5"></div>
     <div id="app"
-         class="bg-white dark:bg-gray-800 px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto backdrop-blur-lg opacity-90 sm:rounded-lg sm:px-10"></div>
+         class="px-6 pt-10 pb-8 ring-1 ring-gray-900/5 sm:mx-auto backdrop-blur-lg sm:rounded-lg sm:px-10"></div>
 </div>
 <script type="module" src="/main.js"></script>
 <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
