--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="public/LOGO2023@100.png" width="100" alt="Flowbite Logo">
+            <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc">
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <button type="button"
