--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite App</title>
+    <title>Simulador</title>
 </head>
 <body>
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc">
+        <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc dark:invert">
         </a>
+        <div>
+            <h1 class="text-3xl font-bold dark:text-white">SIMULADOR</h1>
+        </div>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <button type="button"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 flex space-x-2">
