Animación en bloques. Se agrega MC a bloques.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc dark:invert">
         </a>
         <div>
-            <h1 class="text-3xl font-bold dark:text-white">SIMULADOR</h1>
+            <h1 class="text-lg font-bold dark:text-white">SIMULADOR 2024</h1>
         </div>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <button data-collapse-toggle="navbar-sticky" type="button"
