--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+    <div onclick="exitNav()" id="sideBar"
+         class="fixed top-0 right-0 bg-transparent w-0 h-full overflow-x-hidden duration-500" style="z-index: 1"></div>
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc dark:invert">
@@ -35,10 +37,45 @@
     </div>
 </nav>
 
+<div class="_settings fixed bg-blue-600 z-10 top-1/3 right-0 rounded-l-full p-3 hover:cursor-pointer" onclick="openNav()">
+    <svg xmlns="http://www.w3.org/2000/svg" class="text-white" width="24" height="24" viewBox="0 0 24 24"
+         stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z"/>
+        <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0"/>
+    </svg>
+</div>
+
+<div id="sideBar" class="fixed top-0 right-0 bg-transparent w-0 h-full overflow-x-hidden duration-500 z-20">
+    <!--navigation menu contents-->
+    <div id="sideNav" class="fixed top-0 right-0 bg-gray-300 dark:bg-gray-800 drop-shadow-2xl w-0 h-full flex flex-row-reverse overflow-x-hidden duration-500 z-50">
+        <!--exit icon, will close navbar when clicked-->
+        <a href="javascript:void(0)" onclick="exitNav()" class="text-3xl absolute top-0 right-0 mr-3 mt-2 dark:text-white">&times;</a>
+        <!--menu links-->
+        <div class="_settings__content w-full p-3 pt-12">
+
+        </div>
+    </div>
+</div>
+
 <div class="relative flex min-h-screen flex-col bg-gray-50 py-6 sm:py-12 dark:bg-gray-900">
     <div id="app" class="px-6 pt-10 pb-8 sm:mx-auto sm:px-10"></div>
 </div>
 <script type="module" src="/main.js"></script>
 <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+<script>
+	function openNav()
+	{
+		document.getElementById("sideBar").style.width = "100%";
+		document.getElementById("sideNav").style.width = "20%";
+	}
+
+	/*Close navigation*/
+	function exitNav()
+	{
+		document.getElementById("sideBar").style.width = "0";
+		document.getElementById("sideNav").style.width = "0";
+	}
+</script>
 </body>
 </html>
