--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc dark:invert">
         </a>
-        <div>
-            <h1 class="text-lg font-bold dark:text-white">SIMULADOR 2024</h1>
+        <div class="text-center">
+            <h1 class="text-lg font-bold dark:text-white">PROCESO ELECTORAL LOCAL 2024</h1>
+            <h1 class="text-md font-bold dark:text-white">SIMULADOR DE POSTULACIONES</h1>
         </div>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <button data-collapse-toggle="navbar-sticky" type="button"
