--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div id="sideBar" class="fixed top-0 right-0 bg-transparent w-0 h-full overflow-x-hidden duration-500 z-20">
     <!--navigation menu contents-->
     <div id="sideNav"
-         class="fixed top-0 right-0 bg-gray-300 dark:bg-gray-800 drop-shadow-2xl w-0 h-full flex flex-row-reverse overflow-x-hidden duration-500 z-50">
+         class="fixed top-0 right-0 bg-gray-300 dark:bg-gray-800 border-l-2 dark:border-gray-400 border-gray-700 drop-shadow-2xl w-0 h-full flex flex-row-reverse overflow-x-hidden duration-500 z-50">
         <!--exit icon, will close navbar when clicked-->
         <a href="javascript:void(0)" onclick="exitNav()"
            class="text-3xl absolute top-0 right-0 mr-3 mt-2 dark:text-white">&times;</a>
