Correcciones en autollenado de selección.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="public/LOGO2023@100.png" width="100" alt="IEPC Logo" class="_c__logo_iepc dark:invert">
         </a>
         <div class="text-center">
-            <h1 class="text-lg font-bold dark:text-white">PROCESO ELECTORAL LOCAL 2024</h1>
+            <h1 class="text-lg font-bold dark:text-white">PROCESO ELECTORAL LOCAL 2024-2025</h1>
             <h1 class="text-md font-bold dark:text-white">SIMULADOR DE POSTULACIONES</h1>
         </div>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
