--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 
 <div class="relative flex min-h-screen flex-col bg-gray-50 py-6 sm:py-12 dark:bg-gray-900">
-    <div id="app" class="px-6 pt-10 pb-8 sm:mx-auto sm:px-10"></div>
+    <div id="app" class="px-6 pt-10 pb-8 sm:mx-auto sm:px-10 w-full"></div>
 </div>
 <script type="module" src="/main.js"></script>
 <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
